[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/interface/theme.tres" type="Theme" id=1]
[ext_resource path="res://source/interface/hud/Newspaper.gd" type="Script" id=2]
[ext_resource path="res://assets/interface/news.png" type="Texture" id=3]
[ext_resource path="res://fonts/poco/Poco.ttf" type="DynamicFontData" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 1, 1, 143, 79 )

[sub_resource type="DynamicFont" id=2]
size = 10
outline_size = 1
outline_color = Color( 0.752941, 0.752941, 0.752941, 1 )
extra_spacing_top = -5
extra_spacing_bottom = -1
extra_spacing_space = -2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 10
use_mipmaps = true
extra_spacing_top = -5
extra_spacing_bottom = -1
extra_spacing_space = -2
font_data = ExtResource( 4 )

[node name="GameOverPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 144, 130 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="AcceptTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.0
margin_top = 20.0
margin_right = -56.0
margin_bottom = -63.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource( 1 )
expand = true
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 30.6227
margin_right = -16.0
margin_bottom = -7.37735

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 16.0
margin_right = 225.0
margin_bottom = 91.0
rect_min_size = Vector2( 110, 75 )
custom_constants/separation = 8

[node name="Title" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_right = 225.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ludum Investment
declares BANCRUPTCY"
align = 1
autowrap = true

[node name="Description" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 225.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "After a series of
unhealthy investments,
the company had to
close its doors.
The future of our town
is uncertain."
align = 1
autowrap = true

[node name="RestartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = 55.0
margin_right = 42.0
margin_bottom = 73.0
text = "restart"
[connection signal="timeout" from="AcceptTimer" to="." method="_on_AcceptTimer_timeout"]
[connection signal="pressed" from="RestartButton" to="." method="_on_Button_pressed"]
